workflow to bump app version + allow to call release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,13 @@ name: Release Charts
 
 on:
   workflow_dispatch:
+  workflow_call:
+    
+  # Remove when unified release workflow is ready
   push:
     branches:
       - main
+
 permissions:
   contents: write
 
