--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -312,6 +312,10 @@ sensor:
 collector:
   # -- Enable Collector component
   enabled: true
+  # -- Number of replicas to run (relevant only if instancePerNode: false)
+  replicas: 1
+  # -- Run an instance per node
+  instancePerNode: false
   # -- Component-specific labels
   labels: {}
   # -- Component-specific annotations
