--- a/.github/workflows/update-k8s-integration-app-version.yaml
+++ b/.github/workflows/update-k8s-integration-app-version.yaml
@@ -49,7 +49,7 @@ jobs:
             echo "$major.$minor.$((patch + 1))"
           }
           
-          CHART_YAML=charts/k8s-integration
+          CHART_YAML=charts/k8s-integration/Chart.yaml
           CURRENT_CHART_VERSION=$(yq eval '.version' "$CHART_YAML")
           NEW_CHART_VERSION=$(bump_version "$CURRENT_CHART_VERSION")
           yq eval ".version = \"$NEW_CHART_VERSION\"" -i "$CHART_YAML"
