--- a/.github/workflows/update-k8s-integration-app-version.yaml
+++ b/.github/workflows/update-k8s-integration-app-version.yaml
@@ -21,6 +21,15 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate a token
+        id: generate-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ vars.GH_MIGGO_APP_ID }}
+          private-key: ${{ secrets.GH_MIGGO_APP_KEY }}
+          owner: ${{ github.repository_owner }}
+          repositories: "miggo-helm-charts"
+          
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -28,7 +37,7 @@ jobs:
           ref: feature/MIG-5591/unified-release-workflow # for testing
           show-progress: false
           fetch-depth: 0
-          token: "${{ secrets.GITHUB_TOKEN }}"
+          token: "${{ steps.generate-token.outputs.token }}"
 
       - name: Configure Git
         run: |
@@ -60,7 +69,7 @@ jobs:
           
           NEW_APP_VERSION=${{ inputs.appVersion }}
           yq eval ".appVersion = \"$NEW_VERSION\"" -i "$CHART_YAML"
-          
+
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
@@ -68,4 +77,3 @@ jobs:
           branch: ${{ github.head_ref }}
           file_pattern: 'charts/k8s-integration/Chart.yaml'
           create_branch: false
-          
