--- a/.github/workflows/update-k8s-integration-app-version.yaml
+++ b/.github/workflows/update-k8s-integration-app-version.yaml
@@ -49,6 +49,15 @@ jobs:
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
 
+      - name: Install Helm Docs
+        run: |
+          cd /tmp
+          HELM_DOCS_VERSION=$(curl -s https://api.github.com/repos/norwoodj/helm-docs/releases/latest | jq -r '.tag_name')
+          curl -L -o helm-docs.tar.gz "https://github.com/norwoodj/helm-docs/releases/download/${HELM_DOCS_VERSION}/helm-docs_${HELM_DOCS_VERSION#v}_Linux_x86_64.tar.gz"
+          tar xzvf helm-docs.tar.gz
+          sudo mv helm-docs /usr/local/bin/helm-docs
+          helm-docs --version
+
       - name: Update versions
         id: version_check
         run: |
@@ -70,10 +79,15 @@ jobs:
           NEW_APP_VERSION=${{ inputs.appVersion }}
           yq eval ".appVersion = \"$NEW_VERSION\"" -i "$CHART_YAML"
 
+      - name: Generate Helm Docs
+        id: generate_docs
+        run: |
+          helm-docs
+
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "[AUTO GITHUB] Bump k8s-integration app & chart version"
           branch: ${{ github.head_ref }}
-          file_pattern: 'charts/k8s-integration/Chart.yaml'
+          file_pattern: 'charts/k8s-integration/Chart.yaml charts/k8s-integration/README.md'
           create_branch: false
