--- a/charts/miggo/Chart.yaml
+++ b/charts/miggo/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: k8s-integration
-description: A Helm chart for miggo's k8s-integration
+name: miggo
+description: A Helm chart for Miggo
 type: application
-version: 0.0.56
+version: 0.0.1
 appVersion: "v25.326.1"
