--- a/charts/miggo/tests/volumes/test.yaml
+++ b/charts/miggo/tests/volumes/test.yaml
@@ -5,8 +5,8 @@ release:
   namespace: miggo-space
 
 templates:
-  - templates/k8s-read/deployment.yaml
-  - templates/static-sbom/deployment.yaml
+  - templates/miggo-watch/deployment.yaml
+  - templates/miggo-scanner/deployment.yaml
   - templates/sensor/daemonset.yaml
   - templates/collector/deployment.yaml
   - templates/collector/collector-config-cm.yaml
@@ -38,8 +38,8 @@ tests:
             name: config-volume
             mountPath: /etc/config
 
-  - it: should set custom volumes and volumeMounts in k8s-read deployment
-    template: templates/k8s-read/deployment.yaml
+  - it: should set custom volumes and volumeMounts in miggo-watch deployment
+    template: templates/miggo-watch/deployment.yaml
     set:
       volumes:
         - name: config-volume
@@ -61,8 +61,8 @@ tests:
             name: config-volume
             mountPath: /etc/config
 
-  - it: should set custom volumes and volumeMounts in static-sbom deployment
-    template: templates/static-sbom/deployment.yaml
+  - it: should set custom volumes and volumeMounts in miggo-scanner deployment
+    template: templates/miggo-scanner/deployment.yaml
     set:
       volumes:
         - name: config-volume
